--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Réseau/TP2/JavaApplication1/nbproject/private/
 /Réseau/TP2/JavaApplication1/build/
 /Réseau/TP2/nbproject/private/
+/Middleware/TP2/nbproject/private/
+/Middleware/TP2/build/
