--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /Réseau/TP2/nbproject/private/
 /Middleware/TP2/nbproject/private/
 /Middleware/TP2/build/
+/Réseau/TP3/nbproject/private/
+/Réseau/TP3/build/
