--- a/Réseau/TP4/build.xml
+++ b/Réseau/TP4/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Sockets_UDP_-_TP3" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Sockets UDP - TP3.</description>
+<project name="Sockets_TCP_-_TP4" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Sockets TCP - TP4.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Sockets_UDP_-_TP3-impl.jar">
+        <target name="run" depends="Sockets_TCP_-_TP4-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
