--- a/Réseau/TP4/nbproject/project.properties
+++ b/Réseau/TP4/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Sockets_UDP_-_TP3.jar
+dist.jar=${dist.dir}/Sockets_TCP_-_TP4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Sockets_UDP_-_TP3
+dist.jlink.output=${dist.jlink.dir}/Sockets_TCP_-_TP4
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Sockets_UDP_-_TP3
-main.class=tp3_1.UDPSocketServer
+jlink.launcher.name=Sockets_TCP_-_TP4
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
